Implementação correta da Logica 'AdicionaLivroLogic'

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="menuInicial">
 <a href="mvc?logica=ListaLivroLogic">Listar Livros</a>
-<a href="mvc?logica=AdicionaLivroLogic">Adicionar Livros</a>
+<a href="formLivro.jsp">Adicionar Livro</a>
 </div>
 </body>
 </html>
