mudança de estrutura CSS, usando arquitetura BEM

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,9 +6,10 @@
 <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
-<div class="menuInicial">
-<a href="mvc?logica=ListaLivroLogic">Listar Livros</a>
-<a href="formLivro.jsp">Adicionar Livro</a>
+<div class="menu-inicial box">
+  <div class="menu-inicial__titulo">Selecione a Operação:</div>
+<a class="link-button" href="mvc?logica=ListaLivroLogic">Listar Livros</a>
+<a class="link-button" href="formLivro.jsp">Adicionar Livro</a>
 </div>
 </body>
 </html>
